--- a/WashWashes/app/src/main/AndroidManifest.xml
+++ b/WashWashes/app/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Washer"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/washer" />
+        <activity
+            android:name=".Dryer"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/dryer"></activity>
     </application>
 
 </manifest>
