Machine abstract base class

--- a/WashWashes/local.properties
+++ b/WashWashes/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 31 14:38:18 SGT 2022
-sdk.dir=/Users/Ivan_Feng_Jun_Kai/Library/Android/sdk
+#Sun Apr 10 13:54:27 SGT 2022
+sdk.dir=C\:\\Users\\nevil\\AppData\\Local\\Android\\Sdk
